[gd_scene load_steps=8 format=2]

[ext_resource path="res://cone.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPC.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereMesh" id=2]
radius = 0.5
height = 1.0

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.996078, 0.141176, 0, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0.952941, 0.00784314, 0.00784314, 0.196078 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0, 1, 0, 0.194988, -1, -0.980814, 0, -1, -1, -0.195184, -1, -0.980814, -0.382733, -1, -0.924041, -0.555599, -1, -0.831637, -0.707126, -1, -0.707126, -0.831637, -1, -0.555599, -0.924041, -1, -0.382733, -0.980814, -1, -0.195184, -1, -1, -0.000195742, -0.980814, -1, 0.194988, -0.924041, -1, 0.382537, -0.831637, -1, 0.555403, -0.707126, -1, 0.70693, -0.555599, -1, 0.831441, -0.382733, -1, 0.923845, -0.195184, -1, 0.980619, -0.000195742, -1, 1, 0.194988, -1, 0.980619, 0.382537, -1, 0.923845, 0.555403, -1, 0.831441, 0.70693, -1, 0.70693, 0.831441, -1, 0.555403, 0.923845, -1, 0.382537, 0.980619, -1, 0.194988, 1, -1, -0.000195742, 0.980619, -1, -0.195184, 0.923845, -1, -0.382733, 0.831441, -1, -0.555599, 0.70693, -1, -0.707126, 0.555403, -1, -0.831637, 0.382537, -1, -0.924041 )

[node name="NPC" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.856124 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="VisionRaycast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.35792 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
debug_shape_custom_color = Color( 0.682353, 0, 0, 1 )

[node name="VisionArea" type="Area" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Cone" parent="VisionArea" instance=ExtResource( 1 )]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, 0, -11 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="VisionArea"]
transform = Transform( 10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0, 0, -11 )
shape = SubResource( 4 )

[node name="VisionUpdate" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="area_entered" from="VisionArea" to="." method="_on_VisionArea_area_entered"]
[connection signal="timeout" from="VisionUpdate" to="." method="_on_VisionUpdate_timeout"]
